Fix overflow on zoom

--- a/client/src/Board.css
+++ b/client/src/Board.css
@@ -7,3 +7,7 @@
     justify-content: space-between;
     font-size: 24px;
 }
+
+body {
+    overflow: auto;
+}
