--- a/client/src/DifficultyForm.css
+++ b/client/src/DifficultyForm.css
@@ -33,4 +33,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 100px;
+	margin-left: auto;
+	margin-right: auto;
 }
